1.3.1
	+ Comment out default configuration of source ports operations to stick
	  to the defaults provided by the  Ubuntu package.
1.1.10
	+ New release
1.1
	+ Use new row() and ids() API
0.12.101
	+ Check two hostnames or alias are equal using type method to do
	so
0.12.100
	+ Added optional IP address for domains
	+ Bugfix: Show correct message when editing a hostname
0.12.99
	+ New release
0.12.1
	+ Bugfix. Remove mail exchangers that reference a deleted host name.
0.12
	+ Use the new EBox::Model::Row api
	+ Load module capability in pre-start just like the bind9 init
	script does
	+ Don't add static entry `ns` to localhost if user has defined
	another IP address for the `ns` name0.11.102
	+ Check aliases are not nameserver records as well
0.11.101
	+ Added Mail Exchanger model to introduce MX records in domains.
	+ Added mail exchanger model related methods to the exposed API.
	+ Check consistencies among alias and hostnames within the same
	domain
	+ Updated remainder models to use lastest types HostIP and
	DomainName
	+ Added 'changeName', 'getHostNameByName', 'getHostNameByIP' and
	'findAlias' to improve DNS API to Perl scripts and SOAP clients
0.11.100
	+ add isRunning and enableService to set firewall properly
	+ onInstall() functionality moved to migration script
	+ Do not remove bind9 rc links
	+ Stop bind9 in pre-start in upstart script
0.11.99
	+ Added `getHostname` to the exposed API to interact with
	webserver module
	+ Now tables are shown sorted by 'name' attribute (domain,
	hostname and alias respectively)
0.11
	+ New release
0.10.99
	+ Expose methods in module's API 
	+ Fix bug in migration pre0.9.100 installations
0.10
	+ New release
0.9.100
	+ Add reverse resolution
	+ Use new model/view framework. UI uses Ajax
0.9.99
	+ New release
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ New release
0.9
	+ Added Polish translation
	+ Added Aragonese translation
	+ Added German    translation

0.8.99
        * Add DNS server functionality
0.7.1	